- Fixed: MQTT-AD, preserve select options when updating a device
- Fixed: Replace device now also copies 'Options' field
- Changed: mDNS, hostname now lowercase
- Changed: MQTT-AD, added support for color_temp_command_template
- Changed: TADO, Added fixed API endpoint
- Changed: MQTT, not publishing devices that are not used
- Fixed: mDNS, possible crash when web server (non) SSL was disabled, or a invalid port was specified
- Fixed: Charts, after deleting a datapoint, the browser was not correctly refreshed
- Updated: Windows libraries

Version 2025.1 (May 5th 2025)
- Implemented: Battery level for Setpoint sensors
- Implemented: Charts, zoom option for 'Day' view
- Implemented: Data Pushers, added P1 actual value
- Implemented: EnOcean, now able to choose an optional base_id as sender_id instead of the chip_id (#6213)
- Implemented: Floorplan, Add support for stop button (Ventation blinds)
- Implemented: RFXCom, Updated SDK
- Implemented: Support for Honeywell Series 5/PIR
- Implemented: Text sensor, now posible to edit direct from the GUI
- Implemented: YouLess, added Water meter
- Implemented: More default icons
- Implemented: MQTT-AD, added support for Gas device class
- Implemented: MQTT-AD, added support for Text device class
- Implemented: MQTT-AD, better precision for kWh sensors
- Implemented: MQTT-AD, enabled 'device_automation' component to be compatible with upcoming (2025) Zigbee2MQTT version
- Implemented: MQTT-AD, handling single onoff color mode as a normal light/switch
- Implemented: MQTT-AD, power sensors for the Tuya SPM02
- Implemented: MQTT-AD, support sensors that report humidity but sends 'null' values
- Implemented: MQTT-AD, support for string field state objects
- Implemented: MQTT Push 'Retained' mode option
- Implemented: Rain devices can now be replacement with different types of rain devices
- Implemented: RFXCom, Falmec Support
- Implemented: RTL433, Support Generic Switch (Door) sensor
- Implemented: Tado, oauth2 support